// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notification component > renders notification with error class 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="notification-message"
    class="_notification_120862 _notification--error_120862"
    role="dialog"
  >
    <div
      class="_notification__flex_120862"
    >
      <div
        class="_notification__item_120862"
      >
        <svg
          class="lucide lucide-circle-x _notification__icon_120862 _notification__icon--circle_120862"
          data-testid="x-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m15 9-6 6"
          />
          <path
            d="m9 9 6 6"
          />
        </svg>
      </div>
      <div
        class="_notification__box_120862"
      >
        <span
          class="_notification__message_120862"
          id="notification-message"
        >
          Error Message.
        </span>
      </div>
      <div
        class="_notification__controls_120862"
      >
        <div
          class="_notification__control_120862"
        >
          <button
            class="_notification_button_120862"
          >
            <span
              class="_notification__text_120862"
            >
              Dismiss
            </span>
            <svg
              class="lucide lucide-x _notification__icon_120862"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Notification component > renders notification with success class 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="notification-message"
    class="_notification_120862 _notification--success_120862"
    role="dialog"
  >
    <div
      class="_notification__flex_120862"
    >
      <div
        class="_notification__item_120862"
      >
        <svg
          class="lucide lucide-circle-check _notification__icon_120862 _notification__icon--circle_120862"
          data-testid="check-icon"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="m9 12 2 2 4-4"
          />
        </svg>
      </div>
      <div
        class="_notification__box_120862"
      >
        <span
          class="_notification__message_120862"
          id="notification-message"
        >
          Success Message.
        </span>
      </div>
      <div
        class="_notification__controls_120862"
      >
        <div
          class="_notification__control_120862"
        >
          <button
            class="_notification_button_120862"
          >
            <span
              class="_notification__text_120862"
            >
              Dismiss
            </span>
            <svg
              class="lucide lucide-x _notification__icon_120862"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
